# airdrop

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  phoenix-1.json  pisco-1.json
.github/workflows/: backend.yaml  default.yaml  frontend.yml
backend/: .env  .env.example  Dockerfile  README.md  package-lock.json  package.json
backend-mock/: README.md  package-lock.json  package.json
backend-mock/src/: controller.ts  index.ts
backend/files/: bsc.csv  bsc.uluna.csv  eth.csv  eth.uluna.csv  kava.csv  kava.uluna.csv  terraclassic.csv  terraclassic.uluna.csv
backend/src/: config.ts  controller.ts  index.ts  validation.ts
backend/test/: eth-verifier.test.ts  kelpr-verifier.test.ts  solana-verifier.test.ts  terra-verifier.test.ts
contracts/airdrop/: Cargo.toml  README.md  compile-contracts.sh
contracts/airdrop/build-tools/: Dockerfile  claim-cw3.ts  claim.ts  deploy-cw3.ts  deploy.ts  optimize.sh  package-lock.json  package.json
contracts/airdrop/examples/: schema.rs
contracts/airdrop/src/: contract.rs  crypto.rs  distribution.proto  distribution.rs  ethereum.rs  lib.rs  mod.rs  msg.rs  state.rs  submsg.rs  verification.rs
contracts/airdrop/src/testing/: mod.rs  tests.rs  verification_tests.rs
frontend/: .env  .env.local  README.md  config-overrides.js  index.html  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.scss  App.tsx  chains.json  index.scss  index.tsx  wallets.json
public/: index.html
src/: App.scss  App.tsx  origin-networks.json
tasks/: deploy.ts  routines.ts
(+70 files in other folders)
