[package]
name = "airdrop"
version = "0.0.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"
description = "Airdrop contract for Terra Phoenix - allow users to claim rewards with Merkle Tree based proof"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
default = ["terra"]
eth = []
solana = []
terra = []
cosmos = []

[dependencies]
cw20 = "0.13.4"
cw-storage-plus = "0.13.4"
cosmwasm-std = { version = "1.0.0", features = ["stargate"] }
cosmwasm-storage = { version = "1.0.0" }
schemars = "0.8.1"
sha2 = { version = "0.9.9" }
sha3 = { version = "0.9.1" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
bech32 = "0.9.0"
base64 = "0.13.0"
ripemd = "0.1.1"
hex = "0.4"
bs58 = "0.4.0"
protobuf = { version = "3", features = ["with-bytes"] }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
